--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,11 @@ body{
      background-position: center;
      background-size: cover;
      height: 100vh;
+     background-attachment: fixed;
+}
+.header_container{
+    position: sticky;
+    top: 0;
 }
 .nav_container{
     display: flex;
@@ -14,7 +19,6 @@ body{
     background-color: rgb(255, 99, 71);
     color: rgb(12, 12, 12);
     height: 50px;
-    /* position: fixed; */
     width: 100%;
     z-index: 99;
 }
@@ -42,7 +46,7 @@ body{
     color: rgb(128, 7, 7);
 }
 
-.header_container h1:nth-child(2){
+body .price{
     margin-left: 200px;
     font-size: 1.5rem;
 }
@@ -95,3 +99,32 @@ body{
     border-radius: 10px;
     border: 1px solid wheat;
 }
+.Extra_Option a:hover{
+    background: lightsalmon;
+}
+.parsed h3{
+    margin-left: 145px;
+    color: rgb(54, 54, 54);
+}
+
+table{
+    display: grid;
+    justify-content: center;
+    /* background-color:rgb(247, 126, 71); */
+    border: 1px solid black;
+}
+ th, td {
+    padding: 10px;
+  }
+
+  table .button{
+    background-color: rgb(81, 64, 231);
+    color: beige;
+    width: 70px;
+    border-radius: 30px;
+    padding: 0;
+    text-align: center;
+  }
+  table .button:hover{
+    background-color: tomato;
+  }
